Màj foot Espagne
Erreurs corrigées sur l’infographie sur la domination de l’Espagne sur
le foot européen.

--- a/foot-espagne/Version anglaise/css/svg.css
+++ b/foot-espagne/Version anglaise/css/svg.css
@@ -66,7 +66,7 @@ path {
 }
 
 #germany { border-color:#000000; }
-#england { border-color:#abd9e9; }
+#england { border-color:#a6bddb; }
 #scotland { border-color:#8c510a; }
 #spain { border-color:#d73027; }
 #france { border-color:#313695; }
