--- a/foot-espagne/Version française/css/svg.css
+++ b/foot-espagne/Version française/css/svg.css
@@ -66,7 +66,7 @@ path {
 }
 
 #allemagne { border-color:#000000; }
-#angleterre { border-color:#abd9e9; }
+#angleterre { border-color:#a6bddb; }
 #ecosse { border-color:#8c510a; }
 #espagne { border-color:#d73027; }
 #france { border-color:#313695; }
